<resources>
    <string name="app_name">TiendaApp2</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>

    <string name="menu_venta">Venta</string>
    <string name="menu_compra">Compra</string>
    <string name="menu_producto">Producto</string>
    <string name="menu_cliente">Cliente</string>
    <string name="menu_proveedor">Proveedor</string>
    <string name="menu_empleado">Empleado</string>
    <string name="reportes">Reportes</string>">

    <string name="menu_producto_agregar">Agregar Producto</string>
    <string name="menu_producto_editar">Editar Producto</string>
    <string name="action_logout">Logout</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>